--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
 <h>WAF admin</h><br>
 <a href="/whitelistip">whitelistip</a><br>
-<a href="/blacklistip">blacklistip</a>
+<a href="/blacklistip">blacklistip</a><br>
+<a href="/securitygroup">Security-Group</a>
