--- a/views/security-group.ejs
+++ b/views/security-group.ejs
@@ -1,3 +1,4 @@
 <h>Welcome to SECURITY GROUP</h><br>
-<a href="/securitygroup">Inbound</a><br>
+<a href="/inbound">Inbound</a><br>
+<a href="/outbound">Outbound</a><br>
 <a href="/">Go back to main page</a>
