--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h>WAF admin</h><br>
 <a href="/whitelistip">whitelistip</a><br>
 <a href="/blacklistip">blacklistip</a><br>
+<a href="/suspiciousip">suspiciousip</a><br>
 <a href="/securitygroup">Security-Group</a>
